fix: responsiveness on smaller screens
fix(style): invalid-properties
refactor(style): remove unnecessary props in media query

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -15,7 +15,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: left;
-	align-items: left;
+	align-items: flex-start;
 }
 
 .main a {
@@ -27,6 +27,10 @@
 	text-align: left;
 	line-height: 1.15;
 	font-size: 4rem;
+}
+
+.slogan {
+	text-align: left;
 }
 
 .description {
@@ -45,16 +49,25 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: left;
-	align-items: left;
+	align-items: flex-start;
 }
 
 .links a {
 	font-size: 0.9em;
 }
 
+.list {
+	list-style-type: none;
+	padding-inline-start: 0px;
+}
+
+.list > li:not(:last-child) {
+	margin-bottom: 8px;
+}
+
 .grid {
 	display: flex;
-	align-items: left;
+	align-items: flex-start;
 	justify-content: left;
 	flex-wrap: wrap;
 	max-width: 800px;
@@ -63,20 +76,18 @@
 
 @media (max-width: 600px) {
 	.container {
-		min-height: 100vh;
 		padding: 0 0.5rem;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
-		align-items: center;
+		align-items: flex-start;
+	}
+
+	.title {
+		font-size: 3rem;
 	}
 
 	.main {
-		flex: 1;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
 		font-size: 12px;
 	}
 
@@ -85,25 +96,15 @@
 		font-size: 1.5rem;
 	}
 
-	.title {
-		margin: 0;
-		line-height: 1.15;
-		font-size: 4rem;
-		text-align: left;
-	}
-
 	.description {
-		text-align: left;
-		line-height: 1.5;
 		font-size: 1.5rem;
 	}
 
+	.sponsors {
+		padding: 0 2.5rem 0 2.5rem;
+	}
+
 	.grid {
-		display: flex;
-		align-items: left;
-		justify-content: left;
-		flex-wrap: wrap;
-		max-width: 800px;
 		margin-top: 1rem;
 	}
 }
